[package]
name = "putatuh-patada-potato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-macros = "0.3.8"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1.34.0", features = ["full"] }
